Storage function now working, so when refresh occurs the items are still in the inputs.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row" id="8">
+      <div class="row time-block" id="8">
         <div class="col-sm-2 hour">
           <p>8 am</p>
         </div>
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <div class="row" id="9">
+      <div class="row time-block" id="9">
         <div class="col-sm-2 hour">
           <p>9 am</p>
         </div>
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="row" id="10">
+      <div class="row time-block" id="10">
         <div class="col-sm-2 hour">
           <p>10 am</p>
         </div>
@@ -67,7 +67,7 @@
         </div>
       </div>
 
-      <div class="row" id="11">
+      <div class="row time-block" id="11">
         <div class="col-sm-2 hour">
           <p>11 am</p>
         </div>
@@ -79,7 +79,7 @@
         </div>
       </div>
 
-      <div class="row" id="12">
+      <div class="row time-block" id="12">
         <div class="col-sm-2 hour">
           <p>12 pm</p>
         </div>
@@ -91,7 +91,7 @@
         </div>
       </div>
 
-      <div class="row" id="13">
+      <div class="row time-block" id="13">
         <div class="col-sm-2 hour">
           <p>1 pm</p>
         </div>
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="row" id="14">
+      <div class="row time-block" id="14">
         <div class="col-sm-2 hour">
           <p>2 pm</p>
         </div>
@@ -115,7 +115,7 @@
         </div>
       </div>
 
-      <div class="row" id="15">
+      <div class="row time-block" id="15">
         <div class="col-sm-2 hour">
           <p>3 pm</p>
         </div>
@@ -127,7 +127,7 @@
         </div>
       </div>
 
-      <div class="row" id="16">
+      <div class="row time-block" id="16">
         <div class="col-sm-2 hour">
           <p>4 pm</p>
         </div>
@@ -139,7 +139,7 @@
         </div>
       </div>
 
-      <div class="row" id="17">
+      <div class="row time-block" id="17">
         <div class="col-sm-2 hour">
           <p>5 pm</p>
         </div>
